Adjusted parser method implementation and tests to meet requirements + Fixed warnings