@@ -7,8 +7,7 @@ import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+
 
 public class MovieParserTest {
     private MovieParser parser;
@@ -18,7 +17,7 @@ public class MovieParserTest {
     }
 
     @Test
-    public void testValidMovie1() throws Exception {
+    public void testValidMovie1() {
         // Example of a valid movie file lines (2 lines per movie)
         List<String> movieLines = List.of(
                 "Harry Potter,HP123",
@@ -28,25 +27,60 @@ public class MovieParserTest {
         List<Movie> movies = parser.parse(movieLines);
 
         assertEquals(1, movies.size()); // One movie parsed
-        Movie movie = movies.get(0);
-        assertEquals("Harry Potter", movie.getTitle());
-        assertEquals("HP123", movie.getId());
-        assertEquals(List.of("Fantasy", "Adventure"), movie.getGenres());
+        Movie movie = movies.getFirst();
+        assertEquals("Harry Potter", movie.title());
+        assertEquals("HP123", movie.id());
+        assertEquals(List.of(Movie.Genre.FANTASY, Movie.Genre.ADVENTURE), movie.genres());
     }
 
     @Test
-    public void testInvalidMovieTitle() {
+    public void testInvalidMovieTitleCasing() {
         List<String> movieLines = List.of(
                 "harry Potter,HP123",  // Invalid: first word lowercase
                 "Fantasy"
         );
 
-        Exception exception = assertThrows(Exception.class, () -> {
-            parser.parse(movieLines);
-        });
+        Exception exception = assertThrows(Exception.class, () -> parser.parse(movieLines));
 
         assertEquals("ERROR: Movie Title harry Potter is wrong", exception.getMessage());
     }
+
+    @Test
+    public void testEmptyMovieTitle() {
+        List<String> movieLines = List.of(
+                ",HP123",
+                "Fantasy"
+        );
+
+        Exception exception = assertThrows(Exception.class, () -> parser.parse(movieLines));
+
+        assertEquals("ERROR: Movie Title cannot be null or blank", exception.getMessage());
+    }
+
+    @Test
+    public void testEmptyMovieLine() {
+        List<String> movieLines = List.of(
+                "",
+                "Fantasy"
+        );
+
+        Exception exception = assertThrows(Exception.class, () -> parser.parse(movieLines));
+
+        assertEquals("ERROR: Invalid title, id line", exception.getMessage());
+    }
+
+    @Test
+    public void testEmptyMovieId() {
+        List<String> movieLines = List.of(
+                "Avengers, ",
+                "Fantasy"
+        );
+
+        Exception exception = assertThrows(Exception.class, () -> parser.parse(movieLines));
+
+        assertEquals("ERROR: Movie Id cannot be null or blank", exception.getMessage());
+    }
+
 
     @Test
     public void testInvalidMovieIdLetters() {
@@ -60,18 +94,29 @@ public class MovieParserTest {
     }
 
     @Test
-    public void testInvalidMovieIdNumbers() {
+    public void testInvalidMovieIdDuplicateNumbers() {
         List<String> movieLines = List.of(
                 "Harry Potter,HP112",
                 "Fantasy"
         );
 
         Exception exception = assertThrows(Exception.class, () -> parser.parse(movieLines));
-        assertEquals("ERROR: Movie Id numbers HP112 aren’t unique", exception.getMessage());
+        assertEquals("ERROR: Movie Id numbers HP112 aren't unique", exception.getMessage());
     }
 
     @Test
-    public void testMoviesWithDifferentIdNumbersValid() throws Exception {
+    public void testInvalidMovieIdNumberLength() {
+        List<String> movieLines = List.of(
+                "Harry Potter,HP12",
+                "Fantasy"
+        );
+
+        Exception exception = assertThrows(Exception.class, () -> parser.parse(movieLines));
+        assertEquals("ERROR: Movie Id digits HP12 must be exactly 3 digits", exception.getMessage());
+    }
+
+    @Test
+    public void testMoviesWithDifferentIdNumbersValid() {
         List<String> movieLines = List.of(
                 "Harry Potter,HP123",
                 "Fantasy",
@@ -83,14 +128,14 @@ public class MovieParserTest {
 
         assertEquals(2, movies.size());
 
-        assertEquals("HP123", movies.get(0).getId());
-        assertEquals("A456", movies.get(1).getId());
+        assertEquals("HP123", movies.get(0).id());
+        assertEquals("A456", movies.get(1).id());
     }
 
     @Test
     public void testMoviesWithSameIdNumbersInvalid() {
         List<String> movieLines = List.of(
-                "Harry Potter,HP123",
+                "Aliens,A123",
                 "Fantasy",
                 "Avengers,A123",   // Same numeric part 123 → invalid
                 "Action,Adventure"
@@ -98,22 +143,45 @@ public class MovieParserTest {
 
         Exception exception = assertThrows(Exception.class, () -> parser.parse(movieLines));
 
-        assertEquals("ERROR: Movie Id numbers A123 aren’t unique", exception.getMessage());
+        assertEquals("ERROR: Movie Id numbers A123 aren't unique", exception.getMessage());
     }
 
     @Test
-    public void testValidMovieTitleWithNumber() throws Exception {
+    public void testInvalidMovieGenre() {
         List<String> movieLines = List.of(
-                "Fast And Furious 8,FAF128",  // Title contains a number → valid
+                "Harry Potter,HP123",
+                "Idiot"
+        );
+
+        Exception exception = assertThrows(Exception.class, () -> parser.parse(movieLines));
+        assertEquals("ERROR: Invalid genre IDIOT", exception.getMessage());
+    }
+
+    @Test
+    public void testEmptyMovieGenre() {
+        List<String> movieLines = List.of(
+                "Harry Potter,HP123",
+                ""
+        );
+
+        Exception exception = assertThrows(Exception.class, () -> parser.parse(movieLines));
+        assertEquals("ERROR: Invalid genre ", exception.getMessage());
+    }
+
+    @Test
+    public void testValidMovieTitleWithNumber() {
+        List<String> movieLines = List.of(
+                "Fast And Furious,FAF128",  // Title contains a number → valid
                 "Action"
         );
 
         List<Movie> movies = parser.parse(movieLines);
 
         assertEquals(1, movies.size());
-        Movie movie = movies.get(0);
-        assertEquals("Fast And Furious 8", movie.getTitle());
-        assertEquals("FAF128", movie.getId());
-        assertEquals(List.of("Action"), movie.getGenres());
+        Movie movie = movies.getFirst();
+        assertEquals("Fast And Furious", movie.title());
+        assertEquals("FAF128", movie.id());
+        assertEquals(List.of(Movie.Genre.ACTION), movie.genres());
     }
+
 }
